code review suggestions

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -21,6 +21,7 @@ description: Add authentication and user management to your Next.js app with Cle
 - Set up your environment keys to test your app locally
 - Protect your Next.js app's content with Clerk
 - Use Next.js middleware to implement route-specific authentication
+- Create a header with Clerk components for users to sign in and out
 
 </TutorialHero>
 
@@ -51,21 +52,21 @@ pnpm add @clerk/nextjs
 
 1. If you don't have a `.env.local` file in the root directory of your Next.js project, create one now.
 2. Find your secret key and publishable key. If you're signed into Clerk, the `.env.local` snippet below will contain your both. Otherwise:
-    - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
-    - Select your application, then select **🔑 API Keys** in the sidebar menu.
-    - You can copy your keys from the **Quick Copy** section.
+  - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
+  - Select your application, then select **🔑 API Keys** in the sidebar menu.
+  - You can copy your keys from the **Quick Copy** section.
 3. Add your keys to your `.env.local` file. 
 
 The final result should look as follows:
 
-    <InjectKeys>
+  <InjectKeys>
 
-    ```sh filename=".env.local"
-    NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
-    CLERK_SECRET_KEY={{secret}}
-    ```
+  ```sh filename=".env.local"
+  NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
+  CLERK_SECRET_KEY={{secret}}
+  ```
 
-    </InjectKeys>
+  </InjectKeys>
 
 ### Add `<ClerkProvider>` to your app
 
@@ -74,38 +75,38 @@ All Clerk hooks and components must be children of the [`<ClerkProvider>`](/docs
 Select your preferred router below to learn how to make this data available across your entire app:
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-    ```tsx filename="/src/app/layout.tsx" {1,10-14}
-    import { ClerkProvider } from '@clerk/nextjs'
-    import './globals.css'
+  ```tsx filename="/src/app/layout.tsx" {1,10-14}
+  import { ClerkProvider } from '@clerk/nextjs'
+  import './globals.css'
 
-    export default function RootLayout({
-      children,
-    }: {
-      children: React.ReactNode
-    }) {
-      return (        
-        <ClerkProvider>
-          <html lang="en">
-            <body>{children}</body>
-          </html>
+  export default function RootLayout({
+    children,
+  }: {
+    children: React.ReactNode
+  }) {
+    return (        
+      <ClerkProvider>
+        <html lang="en">
+          <body>{children}</body>
+        </html>
+      </ClerkProvider>
+    )
+  }
+  ```
+
+  ```tsx filename="_app.tsx" {2,6-8}
+    import '@/styles/globals.css'
+    import { ClerkProvider } from "@clerk/nextjs/server";
+    import type { AppProps } from "next/app";
+    function MyApp({ Component, pageProps }: AppProps) {
+      return (          
+        <ClerkProvider {...pageProps}>
+          <Component {...pageProps} />
         </ClerkProvider>
-      )
+      );
     }
+    export default MyApp;
     ```
-
-    ```tsx filename="_app.tsx" {2,6-8}
-      import '@/styles/globals.css'
-      import { ClerkProvider } from "@clerk/nextjs/server";
-      import type { AppProps } from "next/app";
-      function MyApp({ Component, pageProps }: AppProps) {
-        return (          
-          <ClerkProvider {...pageProps}>
-            <Component {...pageProps} />
-          </ClerkProvider>
-        );
-      }
-      export default MyApp;
-      ```
 
 </CodeBlockTabs>
 
@@ -115,31 +116,31 @@ Now that Clerk is installed and mounted in your application, you can decide whic
 
 1. Create a `middleware.ts` file at the root of your project, or in your `src/` directory if you have one.
 2. In your `middleware.ts`, export Clerk's [`clerkMiddleware`](/docs/references/nextjs/clerk-middleware) helper:
-    ```tsx filename="middleware.ts"
-    import { clerkMiddleware } from "@clerk/nextjs/server";
+  ```tsx filename="middleware.ts"
+  import { clerkMiddleware } from "@clerk/nextjs/server";
 
-    export default clerkMiddleware({});
-    ```
+  export default clerkMiddleware({});
+  ```
 3. With `clerkMiddleware()`, authentication will be enabled by default on all routes that your Next.js middleware runs on, blocking access to all signed out visitors. You can specify valid routes using Next.js's [`matcher`](https://nextjs.org/docs/app/building-your-application/routing/middleware#matcher). Add the following code to your `middleware.ts` to protect your entire application:
 
-    ```tsx filename="middleware.ts" {15}
-    import { clerkMiddleware } from "@clerk/nextjs/server";
+  ```tsx filename="middleware.ts" {15}
+  import { clerkMiddleware } from "@clerk/nextjs/server";
 
-    export default clerkMiddleware({
-      // Routes that can be accessed while signed out
-      publicRoutes: ['/anyone-can-visit-this-route'],
-      // Routes that can always be accessed, and have
-      // no authentication information
-      ignoredRoutes: ['/no-auth-in-this-route'],
-    });
+  export default clerkMiddleware({
+    // Routes that can be accessed while signed out
+    publicRoutes: ['/anyone-can-visit-this-route'],
+    // Routes that can always be accessed, and have
+    // no authentication information
+    ignoredRoutes: ['/no-auth-in-this-route'],
+  });
 
-    export const config = {
-      // Protects all routes, including api/trpc.
-      // See https://clerk.com/docs/references/nextjs/clerk-middleware
-      // for more information about configuring your Middleware
-      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
-    };
-    ```
+  export const config = {
+    // Protects all routes, including api/trpc.
+    // See https://clerk.com/docs/references/nextjs/clerk-middleware
+    // for more information about configuring your Middleware
+    matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+  };
+  ```
 
 <Callout type="info">
   See the [`authMiddleware()`](/docs/references/nextjs/auth-middleware#default-behaviour) docs to learn more about `publicRoutes` and `ignoredRoutes`.
@@ -150,34 +151,32 @@ Now that Clerk is installed and mounted in your application, you can decide whic
 Access your app to verify that authentication is enabled:
 
 1. Run your project with the following terminal command from the root directory of your project:
-    <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
-      ```bash filename="terminal"
-      npm run dev
-      ```
+  <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+    ```bash filename="terminal"
+    npm run dev
+    ```
 
-      ```bash filename="terminal"
-      yarn dev
-      ```
+    ```bash filename="terminal"
+    yarn dev
+    ```
 
-      ```bash filename="terminal"
-      pnpm dev
-      ```
+    ```bash filename="terminal"
+    pnpm dev
+    ```
 
-    </CodeBlockTabs>
+  </CodeBlockTabs>
 2. Visit [`http://localhost:3000`](http://localhost:3000) to access your app. The Middleware will redirect you to your Sign Up page, provided by Clerk's [Account Portal](/docs/account-portal/overview) feature.
 3. Sign up to gain access to your application.
 4. Log into your new account. You should be able to access it now.
 
-### Make a header with Clerk components
+### Create a header with Clerk components
 
-You can control which content signed in and signed out users can see with Clerk's [prebuilt components](/docs/components/overview). To get started, we'll make a header where users can sign in or out. To do this, we'll use:
+You can control which content signed in and signed out users can see with Clerk's [prebuilt components](/docs/components/overview). To get started, create a header for your users to sign in or out. To do this, you will use:
 
 - [`<SignedIn>`](/docs/components/control/signed-in): Children of this component can only be seen while **signed in**.
 - [`<SignedOut>`](/docs/components/control/signed-in): Children of this component can only be seen while **signed out**.
-- [`<UserButton />`](/docs/components/user/user-button), a [prebuilt component](/docs/components/overview) that comes styled out of the box to show the avatar from the account the user is signed in with.
-- [`<SignInButton />`(/docs/components/unstyled/sign-in-button)], an unstyled component.
-
-Add the following code to your page component to hide some of its content:
+- [`<UserButton />`](/docs/components/user/user-button): A prebuilt component that comes styled out of the box to show the avatar from the account the user is signed in with.
+- [`<SignInButton />`](/docs/components/unstyled/sign-in-button): An unstyled component that links to the sign-in page or displays the sign-in modal.
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
 ```tsx filename="app/page.tsx" {1,6-11}
@@ -214,11 +213,7 @@ export default function Home() {
 ``` 
 </CodeBlockTabs>
 
-Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) while signed out or signed in to see `<SignInButton />` and `<UserButton />` in action.
-
-### Sign out
-
-Finally, use the `<UserButton />` by selecting your avatar, then selecting **Sign out**.
+Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) while signed out or signed in to see `<SignInButton />` or `<UserButton />` in action.
 
 </Steps>
 
