add introduction descriptions on each page

--- a/docs/errors/applications.mdx
+++ b/docs/errors/applications.mdx
@@ -4,11 +4,13 @@ description: An index of Clerk's applications errors.
 type: reference
 ---
 
-# Application errors index
+# Application errors 
+
+An index of Clerk errors related to an application, such as when an application is not found, or when a user tries to perform an action that they are not authorized to do.
 
 ## `ApplicationNotFound`
 
-Signifies an error when no application with given appID was found.
+Signifies an error when no application with the given `appID` was found.
 
 ```json
 {
@@ -18,10 +20,9 @@ Signifies an error when no application with given appID was found.
 }
 ```
 
-
 ## `NotAuthorizedToDeleteSystemApplication`
 
-Signifies an error when trying to delete a system application.
+Signifies an error when a user tries to delete a system application that they are not authorized to delete.
 
 ```json 
 {
@@ -33,7 +34,7 @@ Signifies an error when trying to delete a system application.
 
 ## `NotAuthorizedToMoveApplicationToOrganization`
 
-Signifies an error when trying to move an application to an organization that the requesting user doesn't belong to.
+Signifies an error when trying to move an application to an organization that the requesting user does not belong to.
 
 ```json 
 {
