--- a/docs/errors/auth.mdx
+++ b/docs/errors/auth.mdx
@@ -4,7 +4,9 @@ description: An index of Clerk's auth errors.
 type: reference
 ---
 
-# Auth errors index
+# Auth errors 
+
+An index of Clerk errors related to authentication, such as when a Clerk Secret Key is invalid, or when a request is not authenticated.
 
 ## `InvalidClerkSecretKey`
 
@@ -218,6 +220,8 @@ Signifies an error when the identifier already exists.
 
 ## `IdentifierNotAllowedAccess`
 
+Signifies an error when the identifier provided is not allowed to access the application.
+
 ```json
 {
     "shortMessage": "Access not allowed.",
@@ -251,6 +255,8 @@ Signifies an error where the auth settings of the instance are not well configur
 ```
 
 ## `InvalidHandshake`
+
+Signifies an error when the handshake request is invalid.
 
 ```json
 {
