--- a/docs/errors/billing-accounts.mdx
+++ b/docs/errors/billing-accounts.mdx
@@ -4,7 +4,9 @@ description: An index of Clerk errors related to billing accounts.
 type: reference
 ---
 
-# Billing accounts errors index
+# Billing accounts errors 
+
+An index of Clerk errors related to billing accounts.
 
 ## `BillingAccountNotFound`
 
