--- a/docs/errors/clients.mdx
+++ b/docs/errors/clients.mdx
@@ -1,14 +1,16 @@
 ---
 title: Clients
-description: An index of Clerk errors related to clients.
+description: An index of Clerk errors related to a client.
 type: reference
 ---
 
-# Client errors index
+# Client errors 
+
+An index of Clerk errors related to a client.
 
 ## `ClientNotFound`
 
-Signifies an error when no client is found with clientID.
+Signifies an error when no client is found with `clientID`.
 
 ```json
 {
