--- a/docs/errors/comms.mdx
+++ b/docs/errors/comms.mdx
@@ -4,7 +4,9 @@ description: An index of Clerk errors related to comms.
 type: reference
 ---
 
-# Comms errors index
+# Comms errors 
+
+An index of Clerk errors related to comms.
 
 ## `IdentificationNotFound`
 
