--- a/docs/errors/cookie.mdx
+++ b/docs/errors/cookie.mdx
@@ -1,10 +1,12 @@
 ---
 title: Cookie
-description: An index of Clerk errors related to cookie.
+description: An index of Clerk errors related to cookies.
 type: reference
 ---
 
-# Cookie errors index
+# Cookie errors 
+
+An index of Clerk errors related to cookies.
 
 ## `MissingClaims`
 
@@ -19,6 +21,7 @@ Signifies an error when token is missing claim.
 ```
 
 ## `InvalidCookie`
+
 Signifies an error when cookie is invalid.
 
 ```json
