--- a/docs/errors/db.mdx
+++ b/docs/errors/db.mdx
@@ -1,10 +1,12 @@
 ---
 title: DB
-description: An index of Clerk errors related to DB.
+description: An index of Clerk errors related to database operations.
 type: reference
 ---
 
-# DB errors index
+# DB errors 
+
+An index of Clerk errors related to database operations.
 
 ## `DuplicateAllowlistIdentifier`
 
