--- a/docs/errors/entitlements.mdx
+++ b/docs/errors/entitlements.mdx
@@ -4,11 +4,13 @@ description: An index of Clerk errors related to entitlements.
 type: reference
 ---
 
-# Entitlements errors index
+# Entitlements errors 
+
+An index of Clerk errors related to entitlements.
 
 ## `FormInvalidEntitlementKey`
 
-Signifies an error when no domain with the given id was found.
+Signifies an error when no domain with the given ID was found.
 
 ```json
 {
@@ -19,6 +21,8 @@ Signifies an error when no domain with the given id was found.
 ```
 
 ## `EntitlementAlreadyAssociatedWithProduct`
+
+Signifies an error when the given entitlement is already associated with the product.
 
 ```json
 {
