--- a/docs/errors/sign-in-tokens.mdx
+++ b/docs/errors/sign-in-tokens.mdx
@@ -4,9 +4,12 @@ description: An index of Clerk errors related to sign in tokens.
 type: reference
 ---
 
-# Sign in tokens errors index
+# Sign in tokens errors 
+
+An index of Clerk errors related to sign in tokens.
 
 ## `SignInTokenRevoked`
+
 ```json
 {
   "shortMessage": "sign in token has been revoked",
