--- a/docs/errors/actor-tokens.mdx
+++ b/docs/errors/actor-tokens.mdx
@@ -4,7 +4,9 @@ description: An index of Clerk errors related to actor tokens.
 type: reference
 ---
 
-# Actor token errors index
+# Actor token errors
+
+An index of Clerk errors related to actor tokens.
 
 ## `ActorTokenRevoked`
 
