--- a/docs/errors/allowlist-identifiers.mdx
+++ b/docs/errors/allowlist-identifiers.mdx
@@ -4,7 +4,9 @@ description: An index of Clerk errors related to allowlist identifiers.
 type: reference
 ---
 
-# Allowlist identifiers errors index
+# Allowlist identifiers errors 
+
+An index of Clerk errors related to allowlist identifiers.
 
 ## `AllowlistIdentifierNotFound`
 
