--- a/docs/errors/backup-codes.mdx
+++ b/docs/errors/backup-codes.mdx
@@ -4,7 +4,9 @@ description: An index of Clerk errors related to backup codes.
 type: reference
 ---
 
-# Backup codes errors index
+# Backup codes errors 
+
+An index of Clerk errors related to backup codes.
 
 ## `BackupCodesNotAvailable`
 
