--- a/docs/errors/billing.mdx
+++ b/docs/errors/billing.mdx
@@ -4,7 +4,9 @@ description: An index of Clerk errors related to billing.
 type: reference
 ---
 
-# Billing errors index
+# Billing errors in
+
+An index of Clerk errors related to billing.
 
 ## `CheckoutLocked`
 
