--- a/docs/errors/blocklist-identifiers.mdx
+++ b/docs/errors/blocklist-identifiers.mdx
@@ -4,7 +4,9 @@ description: An index of Clerk errors related to blocklist identifiers.
 type: reference
 ---
 
-# Blocklist identifiers errors index
+# Blocklist identifiers errors 
+
+An index of Clerk errors related to blocklist identifiers.
 
 ## `DuplicateBlocklistIdentifier`
 
