--- a/docs/errors/deprecation.mdx
+++ b/docs/errors/deprecation.mdx
@@ -4,7 +4,9 @@ description: An index of Clerk errors related to deprecation.
 type: reference
 ---
 
-# Deprecation errors index
+# Deprecation errors 
+
+An index of Clerk errors related to deprecation.
 
 ## `BAPIEndpointDeprecated`
 
