--- a/docs/errors/domains.mdx
+++ b/docs/errors/domains.mdx
@@ -4,11 +4,13 @@ description: An index of Clerk errors related to domains.
 type: reference
 ---
 
-# Domains errors index
+# Domains errors 
+
+An index of Clerk errors related to domains.
 
 ## `DomainNotFound`
 
-Signifies an error when no domain with the given id was found.
+Signifies an error when no domain with the given ID was found.
 
 ```json
 {
@@ -20,7 +22,7 @@ Signifies an error when no domain with the given id was found.
 
 ## `DomainUpdateForbidden`
 
-Signifies an error when trying to update an non production instance domain.
+Signifies an error when trying to update a domain for any instance that is not a production instance.
 
 ```json
 {
@@ -32,6 +34,8 @@ Signifies an error when trying to update an non production instance domain.
 
 ## `OperationNotAllowedOnSatelliteDomain`
 
+Signifies an error when trying to perform an operation on a satellite domain that is not allowed.
+
 ```json
 {
     "shortMessage": "operation not allowed",
@@ -41,6 +45,8 @@ Signifies an error when trying to update an non production instance domain.
 ```
 
 ## `OperationNotAllowedOnPrimaryDomain`
+
+Signifies an error when trying to perform an operation on a primary domain that is not allowed.
 
 ```json
 {
@@ -65,7 +71,7 @@ Signifies an error when the nonce that was given during the sync flow is already
 
 ## `PrimaryDomainAlreadyExists`
 
-Signifies an error when a new domain is added as primary when there is already once in the instance. Currently, we only support a single primary domain per instance.
+Signifies an error when a new domain is added as primary while there is already one in the instance. Currently, we only support a single primary domain per instance.
 
 ```json 
 {
@@ -77,6 +83,8 @@ Signifies an error when a new domain is added as primary when there is already o
 ```
 
 ## `InvalidProxyConfiguration`
+
+Signifies an error when the proxy URL is not configured correctly.
 
 ```json
 {
