--- a/docs/errors/features.mdx
+++ b/docs/errors/features.mdx
@@ -4,7 +4,9 @@ description: An index of Clerk errors related to features.
 type: reference
 ---
 
-# Features errors index
+# Features errors 
+
+An index of Clerk errors related to features.
 
 ## `FeatureNotEnabled`
 
