--- a/docs/errors/sign-in.mdx
+++ b/docs/errors/sign-in.mdx
@@ -4,7 +4,9 @@ description: An index of Clerk errors related to sign in.
 type: reference
 ---
 
-# Sign in errors index
+# Sign in errors 
+
+An index of Clerk errors related to sign in.
 
 ## `SingleModeSessionExists`
 ```json
