--- a/docs/errors/sign-up.mdx
+++ b/docs/errors/sign-up.mdx
@@ -1,8 +1,12 @@
+---
 title: Sign up errors
 description: An index of Clerk errors related to sign up.
 type: reference
+---
 
-# Sign up errors index
+# Sign up errors 
+
+An index of Clerk errors related to sign up.
 
 ## `SignUpNotFound`
 ```json
