fix titles of each page

--- a/docs/errors/application.mdx
+++ b/docs/errors/application.mdx
@@ -1,6 +1,6 @@
 ---
-title: Applications errors
-description: An index of Clerk's applications errors.
+title: Application errors
+description: An index of Clerk errors related to an application.
 type: reference
 ---
 
