--- a/docs/errors/authentication.mdx
+++ b/docs/errors/authentication.mdx
@@ -1,10 +1,10 @@
 ---
-title: Auth errors
-description: An index of Clerk's auth errors.
+title: Authentication errors
+description: An index of Clerk errors related to authentication, such as when a Clerk Secret Key is invalid, or when a request is not authenticated.
 type: reference
 ---
 
-# Auth errors 
+# Authentication errors 
 
 An index of Clerk errors related to authentication, such as when a Clerk Secret Key is invalid, or when a request is not authenticated.
 
