--- a/docs/errors/backup-codes.mdx
+++ b/docs/errors/backup-codes.mdx
@@ -1,10 +1,10 @@
 ---
-title: Backup codes
+title: Backup code errors
 description: An index of Clerk errors related to backup codes.
 type: reference
 ---
 
-# Backup codes errors 
+# Backup code errors 
 
 An index of Clerk errors related to backup codes.
 
