--- a/docs/errors/billing-accounts.mdx
+++ b/docs/errors/billing-accounts.mdx
@@ -1,10 +1,10 @@
 ---
-title: Billing accounts
+title: Billing account errors
 description: An index of Clerk errors related to billing accounts.
 type: reference
 ---
 
-# Billing accounts errors 
+# Billing account errors 
 
 An index of Clerk errors related to billing accounts.
 
