--- a/docs/errors/billing.mdx
+++ b/docs/errors/billing.mdx
@@ -1,10 +1,10 @@
 ---
-title: Billing
+title: Billing errors
 description: An index of Clerk errors related to billing.
 type: reference
 ---
 
-# Billing errors in
+# Billing errors
 
 An index of Clerk errors related to billing.
 
