--- a/docs/errors/entitlements.mdx
+++ b/docs/errors/entitlements.mdx
@@ -1,10 +1,10 @@
 ---
-title: Entitlements
+title: Entitlement errors
 description: An index of Clerk errors related to entitlements.
 type: reference
 ---
 
-# Entitlements errors 
+# Entitlement errors 
 
 An index of Clerk errors related to entitlements.
 
