--- a/docs/errors/features.mdx
+++ b/docs/errors/features.mdx
@@ -1,10 +1,10 @@
 ---
-title: Features
+title: Feature errors
 description: An index of Clerk errors related to features.
 type: reference
 ---
 
-# Features errors 
+# Feature errors 
 
 An index of Clerk errors related to features.
 
