--- a/docs/errors/sign-in-tokens.mdx
+++ b/docs/errors/sign-in-tokens.mdx
@@ -1,10 +1,10 @@
 ---
-title: Sign in tokens
+title: Sign in token errors
 description: An index of Clerk errors related to sign in tokens.
 type: reference
 ---
 
-# Sign in tokens errors 
+# Sign in token errors 
 
 An index of Clerk errors related to sign in tokens.
 
