--- a/docs/errors/sign-in.mdx
+++ b/docs/errors/sign-in.mdx
@@ -1,12 +1,12 @@
 ---
-title: Sign in
-description: An index of Clerk errors related to sign in.
+title: Sign-in errors
+description: An index of Clerk errors related to sign-in.
 type: reference
 ---
 
-# Sign in errors 
+# Sign-in errors 
 
-An index of Clerk errors related to sign in.
+An index of Clerk errors related to sign-in.
 
 ## `SingleModeSessionExists`
 ```json
