--- a/docs/errors/allowlist-identifiers.mdx
+++ b/docs/errors/allowlist-identifiers.mdx
@@ -1,5 +1,5 @@
 ---
-title: Allowlist identifiers
+title: Allowlist identifiers errors
 description: An index of Clerk errors related to allowlist identifiers.
 type: reference
 ---
