--- a/docs/errors/blocklist-identifiers.mdx
+++ b/docs/errors/blocklist-identifiers.mdx
@@ -1,10 +1,10 @@
 ---
-title: Blocklist identifiers
+title: Blocklist identifier errors
 description: An index of Clerk errors related to blocklist identifiers.
 type: reference
 ---
 
-# Blocklist identifiers errors 
+# Blocklist identifier errors 
 
 An index of Clerk errors related to blocklist identifiers.
 
