--- a/docs/errors/db.mdx
+++ b/docs/errors/db.mdx
@@ -1,10 +1,10 @@
 ---
-title: DB
+title: Database errors
 description: An index of Clerk errors related to database operations.
 type: reference
 ---
 
-# DB errors 
+# Database errors 
 
 An index of Clerk errors related to database operations.
 
