--- a/docs/errors/deprecation.mdx
+++ b/docs/errors/deprecation.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deprecation
+title: Deprecation errors
 description: An index of Clerk errors related to deprecation.
 type: reference
 ---
