--- a/docs/errors/domains.mdx
+++ b/docs/errors/domains.mdx
@@ -1,10 +1,10 @@
 ---
-title: Domains
+title: Domain errors
 description: An index of Clerk errors related to domains.
 type: reference
 ---
 
-# Domains errors 
+# Domain errors 
 
 An index of Clerk errors related to domains.
 
