--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -18,36 +18,36 @@ description: A breakdown of all Clerk's errors.
 
 * [`AllowlistIdentifierNotFound`](/docs/errors/allowlist-identifiers#resource-not-found-code)
 
-## [Applications](/docs/errors/applications)
+## [Application](/docs/errors/application)
 
-* [`ApplicationNotFound`](/docs/errors/applications#application-not-found)
-* [`NotAuthorizedToDeleteSystemApplication`](/docs/errors/applications#not-authorized-to-delete-system-application)
-* [`NotAuthorizedToMoveApplicationToOrganization`](/docs/errors/applications#not-authorized-to-move-application-to-organization)
-* [`ApplicationAlreadyBelongsToOrganization`](/docs/errors/applications#application-already-belongs-to-organization)
-* [`ApplicationAlreadyBelongsToUser`](/docs/errors/applications#application-already-belongs-to-user)
-* [`InvalidPlanForResource`](/docs/errors/applications#invalid-plan-for-resource)
-* [`CannotTransferPaidAppToAccountWithoutBillingInformation`](/docs/errors/applications#cannot-transfer-paid-app-to-account-without-billing-information)
-* [`CannotTransferToAccountWithoutPaymentMethod`](/docs/errors/applications#cannot-transfer-to-account-without-payment-method)
+* [`ApplicationNotFound`](/docs/errors/application#application-not-found)
+* [`NotAuthorizedToDeleteSystemApplication`](/docs/errors/application#not-authorized-to-delete-system-application)
+* [`NotAuthorizedToMoveApplicationToOrganization`](/docs/errors/application#not-authorized-to-move-application-to-organization)
+* [`ApplicationAlreadyBelongsToOrganization`](/docs/errors/application#application-already-belongs-to-organization)
+* [`ApplicationAlreadyBelongsToUser`](/docs/errors/application#application-already-belongs-to-user)
+* [`InvalidPlanForResource`](/docs/errors/application#invalid-plan-for-resource)
+* [`CannotTransferPaidAppToAccountWithoutBillingInformation`](/docs/errors/application#cannot-transfer-paid-app-to-account-without-billing-information)
+* [`CannotTransferToAccountWithoutPaymentMethod`](/docs/errors/application#cannot-transfer-to-account-without-payment-method)
 
-## [Auth](/docs/errors/auth)
+## [Authentication](/docs/errors/authentication)
 
-* [`InvalidClerkSecretKey`](/docs/errors/auth#invalid-clerk-secret-key)
-* [`InvalidAuthentication`](/docs/errors/auth#invalid-authentication)
-* [`InvalidAuthorizationHeaderFormat`](/docs/errors/auth#invalid-authorization-header-format)
-* [`InvalidAuthorization`](/docs/errors/auth#invalid-authorization)
-* [`InvalidCSRFToken`](/docs/errors/auth#invalid-csrf-token)
-* [`MissingRequestHeaders`](/docs/errors/auth#missing-request-headers)
-* [`InvalidOriginHeader`](/docs/errors/auth#invalid-origin-header)
-* [`DevBrowserUnauthenticated`](/docs/errors/auth#dev-browser-unauthenticated)
-* [`URLBasedSessionSyncingDisabled`](/docs/errors/auth#url-based-session-syncing-disabled)
-* [`InvalidRequestForEnvironment`](/docs/errors/auth#invalid-request-for-environment)
-* [`RequestInvalidForInstance`](/docs/errors/auth#request-invalid-for-instance)
-* [`InvalidHost`](/docs/errors/auth#invalid-host)
-* [`IdentificationExists`](/docs/errors/auth#identification-exists)
-* [`IdentifierNotAllowedAccess`](/docs/errors/auth#identifier-not-allowed-access)
-* [`SignedOut`](/docs/errors/auth#signed-out)
-* [`InvalidUserSettings`](/docs/errors/auth#invalid-user-settings)
-* [`InvalidHandshake`](/docs/errors/auth#invalid-handshake)
+* [`InvalidClerkSecretKey`](/docs/errors/authentication#invalid-clerk-secret-key)
+* [`InvalidAuthentication`](/docs/errors/authentication#invalid-authentication)
+* [`InvalidAuthorizationHeaderFormat`](/docs/errors/authentication#invalid-authorization-header-format)
+* [`InvalidAuthorization`](/docs/errors/authentication#invalid-authorization)
+* [`InvalidCSRFToken`](/docs/errors/authentication#invalid-csrf-token)
+* [`MissingRequestHeaders`](/docs/errors/authentication#missing-request-headers)
+* [`InvalidOriginHeader`](/docs/errors/authentication#invalid-origin-header)
+* [`DevBrowserUnauthenticated`](/docs/errors/authentication#dev-browser-unauthenticated)
+* [`URLBasedSessionSyncingDisabled`](/docs/errors/authentication#url-based-session-syncing-disabled)
+* [`InvalidRequestForEnvironment`](/docs/errors/authentication#invalid-request-for-environment)
+* [`RequestInvalidForInstance`](/docs/errors/authentication#request-invalid-for-instance)
+* [`InvalidHost`](/docs/errors/authentication#invalid-host)
+* [`IdentificationExists`](/docs/errors/authentication#identification-exists)
+* [`IdentifierNotAllowedAccess`](/docs/errors/authentication#identifier-not-allowed-access)
+* [`SignedOut`](/docs/errors/authentication#signed-out)
+* [`InvalidUserSettings`](/docs/errors/authentication#invalid-user-settings)
+* [`InvalidHandshake`](/docs/errors/authentication#invalid-handshake)
 
 ## [Backup codes](/docs/errors/backup-codes)
 
