--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -1,6 +1,6 @@
 ---
 title: useSignIn()
-description: The useSignIn() hook provides access to the SignIn object, which allows you to check the current state of a sign-in and for creating custom sign-in flows.
+description: Clerk's useSignIn() hook provides access to the SignIn object, which allows you to check the current state of a sign-in.
 ---
 
 # `useSignIn()`
@@ -28,23 +28,7 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
 
 ### Check the current state of a sign-in with `useSignIn()`
 
-You can utilize the `useSignIn()` hook to check the current state of a sign-in.
-
-<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
-  ```tsx filename="pages/index.tsx"
-  import { useSignIn } from "@clerk/nextjs";
-
-  export default function SignInStep() {
-    const { isLoaded, signIn } = useSignIn();
-
-    if (!isLoaded) {
-      // handle loading state
-      return null;
-    }
-
-    return <div>The current sign in attempt status is {signIn.status}.</div>;
-  }
-  ```
+Use the `useSignIn()` hook to check the current state of a sign-in.
 
   ```tsx filename="pages/sign-in-step.tsx"
   import { useSignIn } from "@clerk/clerk-react";
@@ -53,16 +37,15 @@ You can utilize the `useSignIn()` hook to check the current state of a sign-in.
     const { isLoaded, signIn } = useSignIn();
 
     if (!isLoaded) {
-      // handle loading state
+      // Add logic to handle loading state
       return null;
     }
 
     return <div>The current sign in attempt status is {signIn.status}.</div>;
   }
   ```
-</CodeBlockTabs>
 
-The `status` property of the `signIn` object can be one of the following values:
+The `status` property of the `SignIn` object can be one of the following values:
 
 | Values | Descriptiom |
 | --- | --- |
@@ -74,4 +57,4 @@ The `status` property of the `signIn` object can be one of the following values:
 
 ### Create a custom sign-in flow with `useSignIn()`
 
-You can also utilize the `useSignIn()` hook to build fully custom sign-in flows, if Clerk's pre-built components don't meet your specific needs or if you require more control over the authentication flow. Different sign-in flows include email and password, email and phone codes, email links, and multifactor (MFA). To learn more about using the `useSignIn()` hook to create custom flows, check out the [custom flow guides](https://clerk.com/docs/custom-flows/overview).
+The `useSignIn()` hook can also be used to build fully custom sign-in flows, if Clerk's pre-built components don't meet your specific needs or if you require more control over the authentication flow. Different sign-in flows include email and password, email and phone codes, email links, and multifactor (MFA). To learn more about using the `useSignIn()` hook to create custom flows, check out the [custom flow guides](https://clerk.com/docs/custom-flows/use-sign-up).
