--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -1,6 +1,6 @@
 ---
 title: useAuth()
-description: The useAuth() hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
+description: Clerk's useAuth() hook is a convenient way to access the current auth state.
 ---
 
 # `useAuth()`
