--- a/docs/references/react/use-sign-up.mdx
+++ b/docs/references/react/use-sign-up.mdx
@@ -1,6 +1,6 @@
 ---
 title: useSignUp()
-description: The useSignUp() hook gives you access to the SignUp object, which allows you to check the current state of a sign-up and create custom sign-up flows.
+description: Clerk's useSignUp() hook gives you access to the SignUp object, which allows you to check the current state of a sign-up.
 ---
 # `useSignUp()`
 
@@ -27,23 +27,7 @@ The `useSignUp()` hook gives you access to the [`SignUp`](/docs/references/javas
 
 ### Check the current state of a sign-up with `useSignUp()`
 
-You can utilize the `useSignUp()` hook to check the current state of a sign-up.
-
-<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
-  ```tsx filename="pages/sign-up.tsx"
-  import { useSignUp } from "@clerk/nextjs";
-
-  export default function SignUpStep() {
-    const { isLoaded, signUp } = useSignUp();
-
-    if (!isLoaded) {
-      // handle loading state
-      return null;
-    }
-
-    return <div>The current sign-up attempt status is {signUp.status}.</div>;
-  }
-  ```
+Use the `useSignUp()` hook to access the `SignUp` object and check the current state of a sign-up.
 
   ```tsx filename="sign-up-step.tsx"
   import { useSignUp } from "@clerk/clerk-react";
@@ -52,16 +36,15 @@ You can utilize the `useSignUp()` hook to check the current state of a sign-up.
     const { isLoaded, signUp } = useSignUp();
 
     if (!isLoaded) {
-      // handle loading state
+      // Add logic to handle loading state
       return null;
     }
 
     return <div>The current sign-up attempt status is {signUp.status}.</div>;
   }
   ```
-</CodeBlockTabs>
 
-The `status` property of the `signIn` object can be one of the following values:
+The `status` property of the `SignUp` object can be one of the following values:
 
 | Values | Descriptiom |
 | --- | --- |
@@ -71,4 +54,4 @@ The `status` property of the `signIn` object can be one of the following values:
 
 ### Create a custom sign-up flow with `useSignUp()`
 
-You can also utilize the `useSignUp()` hook to build fully custom sign-up flows, if Clerk's pre-built components don't meet your specific needs or if you require more control over the authentication flow. Different sign-up flows include email and password, email and phone codes, email links, and multifactor (MFA). To learn more about using the `useSignUp()` hook to create custom flows, check out the [custom flow guides](https://clerk.com/docs/custom-flows/overview).
+The `useSignUp()` hook can also be used to build fully custom sign-up flows, if Clerk's pre-built components don't meet your specific needs or if you require more control over the authentication flow. Different sign-up flows include email and password, email and phone codes, email links, and multifactor (MFA). To learn more about using the `useSignUp()` hook to create custom flows, check out the [custom flow guides](https://clerk.com/docs/custom-flows/use-sign-up).
