--- a/docs/references/nextjs/route-protection.mdx
+++ b/docs/references/nextjs/route-protection.mdx
@@ -15,7 +15,7 @@ This guide will cover:
 
 ### Opt-In 
 
-`clerkMiddleware()` provides opt-in protection for your routes. By default no routes will be protected. You will indicate what routes to protect through the Middleware, layouts or even per route/page. 
+[`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) provides opt-in protection for your routes. By default no routes will be protected. You will indicate what routes to protect through the Middleware, layouts or even per route/page. 
 
 ### Protect via Middleware, routes, pages, or a mixture of all three
 
@@ -23,16 +23,16 @@ With the opt-in approach of `clerkMiddleware()` you are free to protect your rou
 
 ### Intregration with Organizations and Roles
 
-`clerkMiddleware()` provides a new `auth().protect()` method that can be used when creating rules to protect pages. This will integrate with Organization role and permissions, allowing you to protect routes based on the permissions or roles a user has.
+You can the [`auth().protect()`](/docs/references/nextjs/auth#authorization-with-protect) and [`auth().has()`](/docs/references/nextjs/auth#authorization) methods when creating rules to protect pages. This will integrate with Organization role and permissions, allowing you to protect routes based on the permissions or roles a user has.
 
 
-## Ensure users are logged in to access a route
+## Ensure users are logged in to access a route:w
 
 ### Protect using your Route's layout.tsx 
 
 You can use a `layout.tsx` file to protect the entire route, including all children. The following example would protect the entire `/dashboard` and require users to be signed into the application to access the route. 
 
-```tsx filename="app/src/dashboard/layout.tsx" 
+```tsx filename="app/dashboard/layout.tsx" 
 import { auth } from '@clerk/nextjs/server'
 import { redirect } from 'next/navigation'
 
@@ -51,7 +51,7 @@ export default async function Layout(
 
 You can protect a specific page using our auth() and its helper methods. 
 
-```tsx filename="app/src/subscribe/page.tsx" 
+```tsx filename="app/subscribe/page.tsx" 
 import { auth } from '@clerk/nextjs/server'
 
 export default function Page() {
@@ -73,7 +73,7 @@ export default function Page() {
 
 The following will require users to be logged in to access the `/dashboard` route, and if they are not it will redirect to sign the sign-in route.
 
-```tsx filename="app/src/middleware.ts"
+```tsx filename="middleware.ts"
 import { clerkMiddleware } from '@clerk/nextjs/server';
 
 export default clerkMiddleware(
@@ -94,22 +94,26 @@ export const config = {
 
 ### Protect a route using layout.tsx
 
+You can use `protect()` and `has()` in a route's `layout.tsx` to protect based on roles or permissions.
+
 <CodeBlockTabs type="router" options={["protect()", "has()"]}>
 
-```tsx filename="app/src/dashboard/manage-users/layout.tsx" 
-import { auth } from '@clerk/nextjs/server'
-import { redirect } from 'next/navigation'
+```tsx filename="app/dashboard/manage-users/layout.tsx" 
+import { auth } from "@clerk/nextjs/server";
 
-export default async function Layout(
-  { children }: 
-  { children: React.ReactNode }
-) {
-  const { userId } = auth().protect({ permission: "org:domains:delete"}, { redirectUrl: // PATHNAME})
-  return <>{children}</>
+export default async function Layout({
+  children,
+}: {
+  children: React.ReactNode;
+}) {
+  auth().protect({ permission: "org:test:permission" })
+  return (
+    <div>{children}</div>
+  )
 }
 ```
 
-```tsx filename="app/src/dashboard/manage-users/layout.tsx" 
+```tsx filename="app/dashboard/manage-users/layout.tsx" 
 import { auth } from '@clerk/nextjs/server'
 import { redirect } from 'next/navigation'
 
@@ -120,14 +124,27 @@ export default async function Layout({ children }: { children: React.ReactNode }
   return <>{children}</>
 }
 ```
-
 </CodeBlockTabs>
-
-
 
 ### Page example
 
-```tsx filename="app/src/dashboard/manage-users/page.tsx" 
+You can use `protect()` and `has()` in a specific page to protect using roles and permissions from organizations.
+
+<CodeBlockTabs type="router" options={["protect()", "has()"]}>
+```tsx filename="app/manage-users/page.tsx"
+import { auth } from "@clerk/nextjs/server"
+
+export default function Page() {
+
+  auth().protect({ permission: "org:test:permission" })
+
+  return (
+    <p>This is a page</p>
+  )
+}
+```
+
+```tsx filename="app/dashboard/manage-users/page.tsx" 
 import { auth } from '@clerk/nextjs/server'
 
 export default function Page() {
@@ -144,14 +161,76 @@ if (!auth().has({ role: "org:admin" })) {
   );
 }
 ```
+</CodeBlockTabs>
+
+
+### Middleware
+
+You can manage your route protection with `clerkMiddleware()` along with `has()` and `protect()` to protect based on organization roles and permissions.
+
+<CodeBlockTabs type="router" options={["protect()", "has()"]}>
+```tsx filename="middleware.tsx"
+import {
+  clerkMiddleware,
+  createRouteMatcher,
+} from '@clerk/nextjs/server';
+
+const isProtectedRoute = createRouteMatcher([
+  '/dashboard'
+]);
+
+export default clerkMiddleware((auth, req) => {
+  // Restricted to logged in users
+  // Logged out users will be redirected to sign-in route
+  if (isProtectedRoute(req)) {
+    console.log('test', auth().protect())
+    auth().protect()
+  }
+}
+
+export const config = {
+  matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
+};
+```
+
+```tsx filename="app/dashboard/manage-users/page.tsx" 
+import {
+  clerkMiddleware,
+  createRouteMatcher,
+} from '@clerk/nextjs/server';
+
+const isProtectedRoute = createRouteMatcher([
+  '/dashboard'
+]);
+
+export default clerkMiddleware((auth, req) => {
+  // restrict protected routes to users with specific permissions 
+  if (isProtectedRoute(req)) {
+    console.log('test')
+    auth().protect(has => {
+      return (
+        has({ permission: 'org:test:permission' })
+      )
+    })
+  }
+}
+
+export const config = {
+  matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
+};
+```
+</CodeBlockTabs>
+
+
 
 ## Middleware + layout or page
 
-Applications with more complex protection needs may be well suited to use a mix of Middleware and layout or page based protection. Your application may have a `/dashboard` section, but within that it might have routes or specific pages that are limited to users with a specific role or permission. In a situation such as this you might enforce that only signed in users can access `/dashboard` in your Middleware, and then add specific role based checks the `layout.tsx` for a route like `/dashboard/manage-users`.
+Applications with more complex protection needs may be well suited to use a mix of Middleware and layout or page based protection. Your application may have a `/dashboard` section, but it may also have routes or specific pages that are limited to users with a specific role or permission. In a situation such as this you might enforce that only signed in users can access `/dashboard` in your Middleware, and then add specific role based checks the `layout.tsx` for a route like `app/orgs/layout.tsx"`.
 
 ### Middleware + layout example
 
-```tsx filename="app/src/middleware.ts"
+<CodeBlockTabs type="router" options={["middleware.ts", "app/orgs/layout.tsx"]}>
+```tsx filename="middleware.ts"
 import { clerkMiddleware } from '@clerk/nextjs/server';
 
 export default clerkMiddleware(
@@ -167,31 +246,52 @@ export const config = {
 };
 ```
 
+```tsx filename="app/orgs/layout.tsx" 
+import { auth } from "@clerk/nextjs/server";
 
-
+export default async function Layout({
+  children,
+}: {
+  children: React.ReactNode;
+}) {
+  auth().protect({ permission: "org:test:permission" })
+  return (
+    <div>{children}</div>
+  )
+}
+```
+</CodeBlockTabs>
 
 
 ### Middleware + page example
+<CodeBlockTabs type="router" options={["app/middleware.ts", "app/orgs/page.tsx"]}>
 
-```tsx filename="app/src/middleware.ts"
+```tsx filename="middleware.tsx"
 import { clerkMiddleware } from '@clerk/nextjs/server';
-
+ 
 export default clerkMiddleware(
   (auth, req) => {
-    if (  req.nextUrl.pathname.startsWith('/dashboard')) {
+    if ( req.nextUrl.pathname.startsWith('/dashboard')) {
       auth().protect();
     }
   }
 );
-
+ 
 export const config = {
   matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
 };
 ```
 
+```tsx filename="app/orgs/page.tsx"
+import { auth } from "@clerk/nextjs/server"
 
-## Layout or page only
+export default function Page() {
 
-Since Clerk's `clerkMiddleware()` is purely opt-in, meaning if you don't add any specific protection to the Middleware all routes are by default public. This allows you to then enforce protections via only layouts or even pages and keep your protection logic scoped to that specific area it governs, in your application.
+  auth().protect({ permission: "org:test:permission" })
 
-
+  return (
+    <p>This is a page</p>
+  )
+}
+```
+</CodeBlockTabs>
