--- a/docs/references/javascript/user/totp.mdx
+++ b/docs/references/javascript/user/totp.mdx
@@ -1,11 +1,11 @@
 ---
 title: Time-based One-time Password
-description: These are the methods on the User object that are related to Time-based One-time Password (TOTP) functionality. These methods allow you to generate and verify TOTP secrets, disable TOTP, and manage backup codes for user authentication.
+description: Learn about the methods on the User object that allow you to generate and verify TOTP secrets, disable TOTP, and manage backup codes for user authentication.
 ---
 
 # Time-based one-time password (TOTP)
 
-These are the methods on the [`User`](/docs/references/javascript/user/user) object that are related to Time-based One-time Password (TOTP) functionality. These methods allow you to generate and verify TOTP secrets, disable TOTP, and manage backup codes for user authentication.
+There are a number of methods on the [`User`](/docs/references/javascript/user/user) object that are related to Time-based One-time Password (TOTP) functionality. These methods allow you to generate and verify TOTP secrets, disable TOTP, and manage backup codes for user authentication.
 
 ## Methods
 
