--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -1,11 +1,11 @@
 ---
 title: User Password Management
-description: These are the methods on the User object that help you manage a user's password.
+description: Learn about the methods on the User object that help you manage a user's password.
 ---
 
 # User password management
 
-These are the methods on the [`User`](/docs/references/javascript/user/user) object that help you manage a user's password.
+The [`User`](/docs/references/javascript/user/user) object has methods that help you manage a user's password.
 
 ## `updatePassword()`
 
